Feat: 사자 유형 결과 페이지 개발

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,9 +26,9 @@
   }
 }
 
-/* 전체 폰트를 MeetMe로 통일 */
+/* 전체 폰트 => MeetMe */
 html, body, * {
-  font-family: "MeetMe", sans-serif !important;
+  @apply font-[MeetMe]
 }
 
 button {
