Style: 어른사자 페이지 스타일 리팩토링

--- a/app/globals.css
+++ b/app/globals.css
@@ -46,3 +46,13 @@ button {
 input, textarea, select, option {
   @apply font-[Pretendard];
 }
+
+/* 스크롤바 숨기기용 */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Edge */
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE, Edge */
+  scrollbar-width: none;     /* Firefox */
+}
