Refactor: 버튼 커서 모양을 globals.css에서 관리하도록 수정

--- a/app/globals.css
+++ b/app/globals.css
@@ -40,6 +40,11 @@ html, body, * {
 
 button {
   @apply font-[OkDanDan];
+  @apply cursor-pointer;
+}
+
+button:disabled {
+  @apply cursor-not-allowed;
 }
 
 input, textarea, select, option {
