--- a/app/globals.css
+++ b/app/globals.css
@@ -6,14 +6,15 @@
 
 @font-face {
     font-family: 'MitmiFont';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2402_1@1.0/Ownglyph_meetme-Rg.woff2') format('woff2');
+    src: url('/fonts/Mitmi.woff2') format('woff2');
     font-weight: normal;
     font-display: swap;
 }
 
 @font-face {
   font-family: "Pretendard";
-  src: url("/fonts/PretendardVariable.ttf") format("truetype");
+  src: url("/fonts/PretendardVariable.woff2") format("woff2");
+  font-display: swap;
 }
 
 @font-face {
